FIX: Tittle overflow

--- a/src/app/components/forecast/forecast.component.css
+++ b/src/app/components/forecast/forecast.component.css
@@ -4,6 +4,7 @@
   /* background-color: red; */
   padding: 0;
   margin-top: 2em;
+  position: relative;
 }
 
 .cards {
